--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header class="main-header section">
-      <div class="container">
+    <header class="main-header">
+      <div class="header-container container">
         <nav class="nav-header">
           <a href="" class="logo"><span class="web-logo">WEB</span>STUDIO</a>
           <ul class="menu list">
@@ -34,16 +34,89 @@
           </ul>
 
           <ul class="contact list">
-            <li class="menu-item">
+            <li class="contact-menu-item">
               <a href="mailto:info@devstudio.com" class="link"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="menu-item">
+            <li class="contact-menu-item">
               <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
             </li>
           </ul>
         </nav>
+        <button class="mobile-menu-open js-open-menu">
+          <svg class="mobile-menu-open__icon" width="32" height="22">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mobile-menu js-menu-container">
+        <div class="mobile-menu__container">
+          <button class="mobile-menu__close-btn js-close-menu">
+            <svg class="mobile-menu__close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <ul class="mobile-menu-nav list">
+            <li class="mobile-menu-item">
+              <a href="#" class="mobile-menu-link link">Studio</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="./portfolio.html" class="mobile-menu-link link"
+                >Portfolio</a
+              >
+            </li>
+            <li class="mobile-menu-item">
+              <a href="" class="mobile-menu-link link">Contacts</a>
+            </li>
+          </ul>
+          <div class="mobile-menu-bottom">
+            <ul class="mobile-contact-list list">
+              <li class="mobile-contact-item">
+                <a href="tel:+110001111111" class="mobile-tel link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="email-contact-item">
+                <a href="mailto:info@devstudio.com" class="mobile-email link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <div class="social-mobile social">
+              <ul class="social-networks list">
+                <li class="social-item">
+                  <a class="team-member-social-link" href="">
+                    <svg width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="team-member-social-link">
+                    <svg width="24" height="24">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="team-member-social-link">
+                    <svg width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a href="" class="team-member-social-link">
+                    <svg width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
 
@@ -52,7 +125,10 @@
       <!-- HERO -->
       <section class="hero-section">
         <div class="container">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <h1 class="hero-title">
+            <span class="effective-solutions">Effective Solutions</span> for
+            Your Business
+          </h1>
           <button type="button" class="button-order button" data-modal-open>
             Order Service
           </button>
@@ -60,7 +136,7 @@
       </section>
 
       <!-- Advantages -->
-      <section class="section">
+      <section class="advantages-section section">
         <div class="container">
           <h2 hidden>Advantages</h2>
           <ul class="advantages list">
@@ -159,6 +235,10 @@
           <ul class="team-list list">
             <li class="team-member-card">
               <img
+                srcset="
+                  ./images/mark-guerrero.jpg    1x,
+                  ./images/mark-guerrero@2x.jpg 2x
+                "
                 src="./images/mark-guerrero.jpg"
                 alt="Mark Guerrero's picture"
                 width="264"
@@ -204,6 +284,7 @@
             </li>
             <li class="team-member-card">
               <img
+                srcset="./images/tom-ford.jpg 1x, ./images/tom-ford@2x.jpg 2x"
                 src="./images/tom-ford.jpg"
                 alt="Tom Ford's picture"
                 width="264"
@@ -249,6 +330,10 @@
             </li>
             <li class="team-member-card">
               <img
+                srcset="
+                  ./images/camila-garcia.jpg    1x,
+                  ./images/camila-garcia@2x.jpg 2x
+                "
                 src="./images/camila-garcia.jpg"
                 alt="Camila Garcia's picture"
                 width="264"
@@ -294,6 +379,10 @@
             </li>
             <li class="team-member-card">
               <img
+                srcset="
+                  ./images/daniel-wilson.jpg    1x,
+                  ./images/daniel-wilson@2x.jpg 2x
+                "
                 src="./images/daniel-wilson.jpg"
                 alt="Daniel Wilson's picture"
                 width="264"
@@ -342,7 +431,7 @@
       </section>
 
       <!------- Customers ------->
-      <section class="customers-section section">
+      <!-- <section class="customers-section section">
         <h2 class="section-header">Customers</h2>
         <ul class="customers-list list">
           <li class="customer-item">
@@ -388,11 +477,11 @@
             </a>
           </li>
         </ul>
-      </section>
+      </section> -->
     </main>
 
     <!-- FOOTER -->
-    <footer class="bgc footer-section">
+    <!-- <footer class="bgc footer-section">
       <div class="footer-container container">
         <div class="footer">
           <a href="#" class="logo footer-logo"
@@ -454,10 +543,10 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Modal Window -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-btn-icon" width="8" height="8">
@@ -534,9 +623,10 @@
           <button type="submit" class="modal-form-submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
-    <!-- JavaScript for Modal Window -->
-    <script src="./js/modal.js"></script>
+    <!-- JavaScripts -->
+    <script src="./js/mobile-menu.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
