customers section ready

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
               />
               <div class="team-member-details">
                 <h3 class="list-header">Mark Guerrero</h3>
-                <p class="list-text">Product Designer</p>
+                <p class="social-list-text">Product Designer</p>
                 <div class="social">
                   <ul class="social-networks list">
                     <li class="social-item">
@@ -293,7 +293,7 @@
               />
               <div class="team-member-details">
                 <h3 class="list-header">Tom Ford</h3>
-                <p class="list-text">Frontend Developer</p>
+                <p class="social-list-text">Frontend Developer</p>
                 <div class="social">
                   <ul class="social-networks list">
                     <li class="social-item">
@@ -342,7 +342,7 @@
               />
               <div class="team-member-details">
                 <h3 class="list-header">Camila Garcia</h3>
-                <p class="list-text">Marketing</p>
+                <p class="social-list-text">Marketing</p>
                 <div class="social">
                   <ul class="social-networks list">
                     <li class="social-item">
@@ -391,7 +391,7 @@
               />
               <div class="team-member-details">
                 <h3 class="list-header">Daniel Wilson</h3>
-                <p class="list-text">UI Designer</p>
+                <p class="social-list-text">UI Designer</p>
                 <div class="social">
                   <ul class="social-networks list">
                     <li class="social-item">
@@ -431,7 +431,7 @@
       </section>
 
       <!------- Customers ------->
-      <!-- <section class="customers-section section">
+      <section class="customers-section section">
         <h2 class="section-header">Customers</h2>
         <ul class="customers-list list">
           <li class="customer-item">
@@ -477,11 +477,11 @@
             </a>
           </li>
         </ul>
-      </section> -->
+      </section>
     </main>
 
     <!-- FOOTER -->
-    <!-- <footer class="bgc footer-section">
+    <footer class="bgc footer-section">
       <div class="footer-container container">
         <div class="footer">
           <a href="#" class="logo footer-logo"
@@ -543,7 +543,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Modal Window -->
     <!-- <div class="backdrop is-hidden" data-modal>
