ready to submit hw07

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
         </div>
         <div class="smedia-footer">
           <p class="footer-p">Social media</p>
-          <ul class="social-networks list">
+          <ul class="social-networks-footer list">
             <li class="social-footer-item social-item">
               <a href="" class="social-footer">
                 <svg width="24" height="24">
@@ -546,7 +546,7 @@
     </footer>
 
     <!-- Modal Window -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-btn-icon" width="8" height="8">
@@ -623,10 +623,10 @@
           <button type="submit" class="modal-form-submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <!-- JavaScripts -->
     <script src="./js/mobile-menu.js"></script>
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
