--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </button>
           <ul class="mobile-menu-nav list">
             <li class="mobile-menu-item">
-              <a href="#" class="mobile-menu-link link">Studio</a>
+              <a href="#" class="active-page mobile-menu-link link">Studio</a>
             </li>
             <li class="mobile-menu-item">
               <a href="./portfolio.html" class="mobile-menu-link link"
@@ -146,8 +146,8 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="list-header">Strategy</h3>
-              <p class="list-text">
+              <h3 class="advantages-list-header">Strategy</h3>
+              <p class="advantages-list-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
@@ -158,8 +158,8 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="list-header">Punctuality</h3>
-              <p class="list-text">
+              <h3 class="advantages-list-header">Punctuality</h3>
+              <p class="advantages-list-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
@@ -170,8 +170,8 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="list-header">Diligence</h3>
-              <p class="list-text">
+              <h3 class="advantages-list-header">Diligence</h3>
+              <p class="advantages-list-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
@@ -182,8 +182,8 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="list-header">Technologies</h3>
-              <p class="list-text">
+              <h3 class="advantages-list-header">Technologies</h3>
+              <p class="advantages-list-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
