fixed the responsiveness and adaptability issues with 320-480px range

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="mobile-menu-bottom">
             <ul class="mobile-contact-list list">
               <li class="mobile-contact-item">
-                <a href="tel:+110001111111" class="mobile-tel link"
+                <a href="tel:+110001111111" class="active-page mobile-tel link"
                   >+11 (000) 111-11-11</a
                 >
               </li>
