fixed widths and other sizes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </button>
           <ul class="mobile-menu-nav list">
             <li class="mobile-menu-item">
-              <a href="#" class="active-page mobile-menu-link link">Studio</a>
+              <a href="#" class="active-phone mobile-menu-link link">Studio</a>
             </li>
             <li class="mobile-menu-item">
               <a href="./portfolio.html" class="mobile-menu-link link"
@@ -125,10 +125,7 @@
       <!-- HERO -->
       <section class="hero-section">
         <div class="container">
-          <h1 class="hero-title">
-            <span class="effective-solutions">Effective Solutions</span> for
-            Your Business
-          </h1>
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button-order button" data-modal-open>
             Order Service
           </button>
