--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
-    <title>Document</title>
+    <title>Studio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -73,7 +73,7 @@
           <div class="mobile-menu-bottom">
             <ul class="mobile-contact-list list">
               <li class="mobile-contact-item">
-                <a href="tel:+110001111111" class="active-page mobile-tel link"
+                <a href="tel:+110001111111" class="active-phone mobile-tel link"
                   >+11 (000) 111-11-11</a
                 >
               </li>
