--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
