--- a/index.html
+++ b/index.html
@@ -429,51 +429,53 @@
 
       <!------- Customers ------->
       <section class="customers-section section">
-        <h2 class="section-header">Customers</h2>
-        <ul class="customers-list list">
-          <li class="customer-item">
-            <a href="" class="customer-logo">
-              <svg width="104" height="56" class="customer-logo-icon">
-                <use href="./images/icons.svg#icon-logo-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customer-item">
-            <a href="" class="customer-logo">
-              <svg width="104" height="56" class="customer-logo-icon">
-                <use href="./images/icons.svg#icon-logo-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customer-item">
-            <a href="" class="customer-logo">
-              <svg width="104" height="56" class="customer-logo-icon">
-                <use href="./images/icons.svg#icon-logo-3"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customer-item">
-            <a href="" class="customer-logo">
-              <svg width="104" height="56" class="customer-logo-icon">
-                <use href="./images/icons.svg#icon-logo-4"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customer-item">
-            <a href="" class="customer-logo">
-              <svg width="104" height="56" class="customer-logo-icon">
-                <use href="./images/icons.svg#icon-logo-5"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customer-item">
-            <a href="" class="customer-logo">
-              <svg width="104" height="56" class="customer-logo-icon">
-                <use href="./images/icons.svg#icon-logo-6"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-header">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customer-item">
+              <a href="" class="customer-logo">
+                <svg width="104" height="56" class="customer-logo-icon">
+                  <use href="./images/icons.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="customer-logo">
+                <svg width="104" height="56" class="customer-logo-icon">
+                  <use href="./images/icons.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="customer-logo">
+                <svg width="104" height="56" class="customer-logo-icon">
+                  <use href="./images/icons.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="customer-logo">
+                <svg width="104" height="56" class="customer-logo-icon">
+                  <use href="./images/icons.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="customer-logo">
+                <svg width="104" height="56" class="customer-logo-icon">
+                  <use href="./images/icons.svg#icon-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="customer-logo">
+                <svg width="104" height="56" class="customer-logo-icon">
+                  <use href="./images/icons.svg#icon-logo-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
