visually hidden advantages menu

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <!-- Advantages -->
       <section class="advantages-section section">
         <div class="container">
-          <h2 hidden>Advantages</h2>
+          <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages list">
             <li class="advantages-item">
               <div class="thumb">
